src/test/data/tests/const/invalid/assign_var_to_const_global.c
int b = 0;
const int a = b;

int main(void) {
    return 0;
}
